# osp-vivio-medical-draft

./: .gitignore  README.md  auth.json  osp_vivo.csv
vivo/: README.md  auth.json  pyproject.toml
vivo/src/vivo/: webscrap.py
vivo/src/vivo/lista_csv/: lista.csv
